2010-09-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45709
	* tree-inline.c (copy_phis_for_bb): Delay commit of edge
	insertions until after all PHI nodes of the block are processed.

2010-09-12  Alexander Monakov  <amonakov@ispras.ru>

	Backport from mainline
	2010-09-06  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/44919
	* sel-sched.c (move_cond_jump): Remove assert, check that
	the several blocks case can only happen with mutually exclusive
	insns instead.  Rewrite the movement code to support moving through
	several basic blocks.

2010-09-09  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/45312
	* reload1.c (merge_assigned_reloads): Remove.
	(reload_as_needed): Don't call it.

2010-09-09  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/44554
	* ira.c (ira): Switch off sharing spill slots if setjmp is called.

2010-09-08  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/40386
	* ira.c (pseudo_for_reload_consideration_p): Don't use
	flag_ira_share_spill_slots.

2010-09-08  Martin Jambor  <mjambor@suse.cz>

	PR other/45443
	* doc/invoke.texi: Add -fipa-cp-clone to list of switches turned on
	at -O3.

2010-09-07  Ian Bolton  <ian.bolton@arm.com>

	Backport from mainline
	2010-09-01  Ian Bolton  <ian.bolton@arm.com>

	* Makefile.in (tree-switch-conversion.o): Update dependencies.
	
	2010-08-19  Ian Bolton  <ian.bolton@arm.com>
	
	PR target/45070
	* config/arm/arm.c (arm_output_epilogue): Ensure that return
	value of size 1-3 is handled correctly.

	2010-08-19  Ian Bolton  <ian.bolton@arm.com>

	* tree-switch-conversion.c (gen_inbound_check): Ensure that the
	type for the conditional has wide enough range.

	2010-08-07  Marcus Shawcroft  <marcus.shawcroft@arm.com>
	
	* config/arm/linux-atomic.c (SUBWORD_VAL_CAS): Instantiate with
	'unsigned short' and 'unsigned char' instead of 'short' and 'char'.
	(SUBWORD_BOOL_CAS): Likewise.
	(SUBWORD_SYNC_OP): Likewise.
	(SUBWORD_TEST_AND_SET): Likewise.